# Computer-Systems-Performance

./: .gitignore  LICENSE  README.md
handin_1/: CMakeLists.txt  Cargo.toml  README.md  bootstrap.sh  csv_transformer.py  data  main.cpp  minus_perf_times.txt  perf.sh  perf_stat.sh  run.sh  time.sh
handin_1/include/: concurrent_output.h  parallel_buffer.h  utils.h
handin_1/perf/: main.py
handin_1/perf/concurrent/: t1-h1-i1.txt  t1-h1-i10.txt  t1-h1-i2.txt  t1-h1-i3.txt  t1-h1-i4.txt  t1-h1-i5.txt  t1-h1-i6.txt  t1-h1-i7.txt  t1-h1-i8.txt  t1-h1-i9.txt  t1-h10-i1.txt  t1-h10-i10.txt  t1-h10-i2.txt  t1-h10-i3.txt  t1-h10-i4.txt  t1-h10-i5.txt  t1-h10-i6.txt  t1-h10-i7.txt  t1-h10-i8.txt  t1-h10-i9.txt  t1-h11-i1.txt  t1-h11-i10.txt  t1-h11-i2.txt  t1-h11-i3.txt  t1-h11-i4.txt  t1-h11-i5.txt  t1-h11-i6.txt  t1-h11-i7.txt  t1-h11-i8.txt  t1-h11-i9.txt  t1-h12-i1.txt  t1-h12-i10.txt  t1-h12-i2.txt  t1-h12-i3.txt  t1-h12-i4.txt  t1-h12-i5.txt  t1-h12-i6.txt  t1-h12-i7.txt  t1-h12-i8.txt  t1-h12-i9.txt  (+1040 more)
handin_1/perf/parallel/: t1-h1-i1.txt  t1-h1-i10.txt  t1-h1-i2.txt  t1-h1-i3.txt  t1-h1-i4.txt  t1-h1-i5.txt  t1-h1-i6.txt  t1-h1-i7.txt  t1-h1-i8.txt  t1-h1-i9.txt  t1-h10-i1.txt  t1-h10-i10.txt  t1-h10-i2.txt  t1-h10-i3.txt  t1-h10-i4.txt  t1-h10-i5.txt  t1-h10-i6.txt  t1-h10-i7.txt  t1-h10-i8.txt  t1-h10-i9.txt  t1-h11-i1.txt  t1-h11-i10.txt  t1-h11-i2.txt  t1-h11-i3.txt  t1-h11-i4.txt  t1-h11-i5.txt  t1-h11-i6.txt  t1-h11-i7.txt  t1-h11-i8.txt  t1-h11-i9.txt  (+1050 more)
handin_1/src/: concurrent_output.cpp  homemade_hash.cpp  main.cpp  main.rs  parallel_buffer.cpp  utils.cpp
(+10985 files in other folders)
